# PI-SATELLITE-ROTATOR

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
cmake/: aarch64-linux-gnu.cmake  armv6-rpi-linux-gnueabihf.cmake
config/: pi-satellite-rotator.env.example
docs/: architecture.md  azimuth-zero-workflow.md  gpio-motor-backend.md  gpio-smoke-test.md  hardware.md  pi-install.md  release-packaging.md  web-control.md  web-sensor-controls.md  web-ui-assets.md  wiring.md  witmotion.md  wt901-sensor-mapping.md
include/rotator/: easycomm.hpp  gpio_motor_backend.hpp  motor_backend.hpp  rotator.hpp  tcp_server.hpp  web_server.hpp  witmotion.hpp
packaging/: install-release-template.sh  pi-satellite-rotator.service
scripts/: build-release-packages.sh  build-rpi-zero-32.sh  build-rpi.sh  build-rpi64.sh  docker-common.sh  gpio-smoke-test.sh  install-pi.sh  test.sh  upload-release-packages.sh  validate-pi-install.sh
src/: easycomm.cpp  gpio_motor_backend.cpp  main.cpp  motor_backend.cpp  rotator.cpp  tcp_server.cpp  web_server.cpp  witmotion.cpp  witmotion_tool.cpp
tests/: test_easycomm.cpp  test_web.cpp  test_witmotion.cpp
tools/: apply_pi_rotator_hardening_v1.sh  validate_pi_rotator_hardening_v1.sh  validate_pi_rotator_hardening_v1_failfast.sh  validate_pi_rotator_hardening_v1_failfast_v2.sh  validate_pi_rotator_hardening_v1_failfast_v3.sh
web/: app.css  app.js  index.html
